<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Román Ginés Martínez Ferrández <rgmf@riseup.net>
 *
 * This program (LibreTeacherNotebook) is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General 
 * Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/context_menu_change"  
		android:title="@string/change_info" />
	<item
		android:id="@+id/context_menu_delete"  
		android:title="@string/delete_this" />
	<item
		android:id="@+id/context_menu_same_mark"  
		android:title="@string/same_mark_for_all_students" />
</menu>