<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Román Ginés Martínez Ferrández <rgmf@riseup.net>
 *
 * This program (LibreTeacherNotebook) is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General 
 * Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:id="@+id/add_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
    
    <!-- START DATE -->
	<TextView
        android:id="@+id/procedure_start_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/procedure_start_date_hint"
        android:textSize="22sp" />
       
    <DatePicker 
        android:id="@+id/procedure_start_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:singleLine="true"
        android:layout_below="@id/procedure_start_date_text" />
    
    <!-- END DATE -->
	<TextView
        android:id="@+id/procedure_end_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/procedure_end_date_hint"
        android:textSize="22sp"
        android:layout_below="@id/procedure_start_date_input" />
       
    <DatePicker 
        android:id="@+id/procedure_end_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:singleLine="true"
        android:layout_below="@id/procedure_end_date_text" />
   
    <!-- NAME -->
	<TextView
        android:id="@+id/procedure_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/procedure_name_hint"
        android:textSize="22sp"
        android:layout_below="@id/procedure_end_date_input" />
       
    <EditText 
        android:id="@+id/procedure_name_input"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:singleLine="true"
        android:layout_below="@id/procedure_name_text" />
    
    <!-- DESCRIPTION -->
	<TextView
        android:id="@+id/procedure_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/procedure_description_hint"
        android:textSize="22sp"
        android:layout_below="@id/procedure_name_input" />
       
    <EditText 
        android:id="@+id/procedure_description_input"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:singleLine="false"
        android:layout_below="@id/procedure_description_text" />
    
    <!-- WEIGHT -->
	<TextView
        android:id="@+id/procedure_weight_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/procedure_weight_hint"
        android:textSize="22sp"
        android:layout_below="@id/procedure_description_input" />
       
    <EditText
        android:id="@+id/procedure_weight_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/procedure_weight_text"
        android:inputType="numberDecimal"
        android:text="1"
        android:textSize="22sp" />
    
    <!-- BUTTON -->
    <Button
        android:id="@+id/cancel_procedure_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_hint"
        android:textSize="22sp"
        android:layout_below="@id/procedure_weight_input"
        android:layout_alignParentBottom="true" />
    
    <Button
        android:id="@+id/update_procedure_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button_hint"
        android:textSize="22sp"
        android:layout_toRightOf="@id/cancel_procedure_button"
        android:layout_alignParentBottom="true" />
    
    <Button
        android:id="@+id/add_procedure_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_hint"
        android:textSize="22sp"
        android:layout_toRightOf="@id/update_procedure_button"
        android:layout_alignParentBottom="true" />

</RelativeLayout>

</ScrollView>